connects myspace bg to theme stylesheet with correct light and dark mode colors and opacities assigned

--- a/src/components/MySpace/MySpace.module.scss
+++ b/src/components/MySpace/MySpace.module.scss
@@ -1,6 +1,8 @@
 @import 'styles/uswdsDependencies';
+@import 'styles/sfds/sfdsDependencies';
 
 .mySpace {
+  background: var(--mySpaceBg);
   .pageTitle {
     margin-top: 0;
     font-weight: 700;
